<resources>
    <string name="app_name">MyLibrary</string>
    <string name="add_book">Add book</string>
    <string name="positive_button">Ok</string>
    <string name="read">Read</string>
    <string name="loan">Loan</string>
    <string name="genre">Genre: </string>
    <string name="score">Score</string>
    <string name="date">Loan date: </string>
    <string name="destination">Lent to: </string>
    <string name="returnLoan">Returned</string>
    <string name="to">To</string>
    <string name="errorScore">The score of the book must be between 1 and 5</string>
    <string name="errorTo">The field cannot be empty</string>
</resources>